# deployment-notification-o365

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  send_deployment_notification.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  dependency-review-config.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  labels.yml  release.yml  schedule.yml  scorecard.yml  security.yml  validate.yml
tests/: conftest.py  test_core.py  test_email.py  test_utils.py
